修复RNS引擎脚本不支持Java 11的问题.